--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "start": "NODE_ENV=production node dist/server.js"
     },
     "dependencies": {
+        "@vrbo/pino-rotating-file": "^4.1.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
@@ -18,7 +19,6 @@
         "multer": "^1.4.5-lts.1",
         "pino": "6.3.2",
         "pino-pretty": "~3.1.0",
-        "@vrbo/pino-rotating-file": "^4.1.0",
         "xlsx": "^0.18.5"
     },
     "devDependencies": {
@@ -27,17 +27,16 @@
         "@types/multer": "^1.4.7",
         "@types/node": "^18.7.6",
         "@types/pino": "6.3.2",
-        "nodemon": "^2.0.19",
-        "ts-node": "^10.9.1",
-        "typescript": "^4.7.4",
+        "@typescript-eslint/eslint-plugin": "^5.33.1",
+        "@typescript-eslint/parser": "^5.33.1",
         "eslint": "^8.0.1",
-        "eslint-config-prettier": "^8.5.0",
         "eslint-config-standard": "^17.0.0",
         "eslint-plugin-import": "^2.25.2",
         "eslint-plugin-n": "^15.0.0",
-        "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-promise": "^6.0.0",
-        "prettier": "^2.7.1",
-        "sucrase": "^3.25.0"
+        "nodemon": "^2.0.19",
+        "sucrase": "^3.25.0",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.7.4"
     }
 }
